# PySide6-Fluent-Widgets-Pro

./: .gitignore  README.md  main.py
app/config/: config.json
docs/: README_zh.md
gallery/common/: config.py  style_sheet.py  translator.py
gallery/resource/: resource.qrc
gallery/view/: gallery_interface.py
gallery/view/chart/: charts_interface.py  charts_js.py  home_interface.py  realtime_interface.py
qfluentwidgets_pro/_rc/: resource.py  resource.qrc
qfluentwidgets_pro/_rc/i18n/: qfluentwidgets.ar_AR.qm  qfluentwidgets.ar_AR.ts  qfluentwidgets.en_US.qm  qfluentwidgets.en_US.ts  qfluentwidgets.es_ES.qm  qfluentwidgets.es_ES.ts  qfluentwidgets.pl_PL.qm  qfluentwidgets.pl_PL.ts  qfluentwidgets.ru_RU.qm  qfluentwidgets.ru_RU.ts  qfluentwidgets.zh_CN.qm  qfluentwidgets.zh_CN.ts  qfluentwidgets.zh_HK.qm  qfluentwidgets.zh_HK.ts  qfluentwidgets.zh_TW.qm  qfluentwidgets.zh_TW.ts
qfluentwidgets_pro/common/: icon.py
qfluentwidgets_pro/components/navigation/: __init__.py  navigation_widget.py  top_navigation_panel.py
qfluentwidgets_pro/components/widgets/: __init__.py  (+12 more)
qfluentwidgets_pro/examples/gallery/: CMakeLists.txt
qfluentwidgets_pro/examples/gallery/app/view/: basic_input_interface.py  date_time_interface.py  dialog_interface.py  gallery_interface.py  home_interface.py  icon_interface.py  layout_interface.py  main_window.py  material_interface.py  menu_interface.py  navigation_view_interface.py  scroll_interface.py  setting_interface.py  status_info_interface.py  text_interface.py  view_interface.py
qfluentwidgets_pro/window/: fluent_window.py
(+5 files in other folders)
